feat(rag): notify browser of LLM retry/waiting/fallback/warning and search hit count (#3130)
* feat(rag): add onRetry/onWaiting/onWarning to LlmStreamCallback

* feat(rag): add onRetry/onWaiting/onFallback/onWarning + payload onPhaseComplete to ChatPhaseCallback

* feat(rag): add PhaseAwareStreamCallback to bridge LLM events to phase callback

* test(rag): restore preexisting ChatPhaseCallback tests alongside new ones

* refactor(rag): enforce non-null inner callback in PhaseAwareStreamCallback

* feat(rag): wrap LlmStreamCallback with PhaseAwareStreamCallback in ChatClient

* feat(rag): emit onFallback before regenerated-query search restart

* feat(rag): include hitCount in search phase completion payload

* style(rag): drop redundant java.util.Map FQN (Map already imported)

* feat(rag): notify onWaiting when concurrency permit unavailable

* feat(rag): emit onWarning when reasoning model triggers internal fallback

* style(rag): drop dead callback-null guard before onWarning

* feat(rag): emit retry/waiting/fallback/warning SSE events and hitCount in phase complete

* test(rag): cover new SSE event types in ChatApiManager

* feat(rag): handle retry/waiting/fallback/warning SSE events and hitCount in chat.js

* feat(rag): inject retry/waiting/fallback/warning/hitCount labels into chat.js config

* i18n(rag): add chat retrying/waiting/fallback/warning/hitCount labels (17 languages)

* refactor(rag): extract emitSseEventSafely + putIfNotNull helpers in ChatApiManager